# henjiu-relay-server

./: .env  .env.example  .gitignore  README.md  connector.js  henjiu-connector-plugin.js  pyproject.toml  run_tests.py
henjiu-connector/: DEPLOY.md  index.js
henjiu_relay_server/: __init__.py  admin.py  client.py  config.py  database.py  router.py  server.py  websocket.py
plugin/: DEPLOY.md  relay-plugin.json
relay/: package.json
tests/: test_api.py  test_core.py
